--- a/comments.html
+++ b/comments.html
@@ -111,7 +111,7 @@
         <main>
             <!-- begin wwww.htmlcommentbox.com -->
             <div id="HCB_comment_box">
-                <a href="http://www.htmlcommentbox.com">fucking website</a> is loading comments...
+                <a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...
             </div>
             <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
             <script type="text/javascript" id="hcb"> 
@@ -132,5 +132,23 @@
             <!-- end www.htmlcommentbox.com -->
         </main>
     </div>
+
+    <script>
+        // Wait for the comments to load and dynamically adjust the site's container height
+        window.addEventListener("load", () => {
+            const commentBox = document.getElementById("HCB_comment_box");
+            const container = document.querySelector(".site-container");
+
+            // Periodically check if the comment box has new content
+            const adjustContainerHeight = () => {
+                if (commentBox.offsetHeight > 0) {
+                    container.style.height = 'auto'; // Allow it to grow
+                }
+            };
+
+            // Check every 500ms for dynamic loading
+            setInterval(adjustContainerHeight, 500);
+        });
+    </script>
 </body>
 </html>
