--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </style>
 </head>
 <body>
-<a href="https://www.freecounterstat.com" title="page counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=wcmaa6qykfkk541attn95uc38lnu6h9p" border="0" title="page counter" alt="page counter"></a>
+<div id="sfcmhy89ftst1leqwktbdly1m292u9hryt6"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=mhy89ftst1leqwktbdly1m292u9hryt6&down=async" async></script><br><a href="https://www.freecounterstat.com">web counter</a><noscript><a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=mhy89ftst1leqwktbdly1m292u9hryt6" border="0" title="web counter" alt="web counter"></a></noscript>
     <div class="site-container">
         <header>
             <img src="https://i.imgur.com/LkrtPPX.jpeg" alt="Logo" class="logo">
